# inspectord

./: .gitignore  Cargo.toml  README.md  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: ci.yml
crates/inspectord_native/: Cargo.toml  build.rs
crates/inspectord_native/src/: btf_offsets.rs  lib.rs  loader.rs  records.rs
crates/inspectord_native_bpf/: Cargo.toml
crates/inspectord_native_bpf/.cargo/: config.toml
crates/inspectord_native_bpf/src/: main.rs  records.rs
docs/manual-acceptance/: deps-acceptance.md  process-collector-acceptance.md
docs/superpowers/plans/: 2026-05-24-dependency-manager.md  2026-05-24-log-tailer-fim-enrichment.md  2026-05-24-phase-0-skeleton.md  2026-05-24-rule-engine-allowlist-notifier.md  2026-05-25-process-collector-ebpf.md  2026-05-25-web-dashboard.md
docs/superpowers/specs/: 2026-05-24-local-inspection-design.md
inspectorctl/: __init__.py  __main__.py  ipc_client.py
inspectorctl/cli/: alerts.py  app.py  deps.py  events.py  self_test.py  status.py  version.py
inspectorctl/tray/: __main__.py
inspectorctl/web/: __init__.py  __main__.py  app.py  ipc.py
inspectorctl/web/routes/: __init__.py  alerts.py  deps.py  events.py  health.py
inspectorctl/web/static/: styles.css
inspectorctl/web/templates/: _macros.html  alert_detail.html  alerts.html  base.html  deps.html  events.html  events_feed.html  health.html
inspectord/: __init__.py  __main__.py  config.py  ids.py  ipc_server.py  journal.py  log.py  ratelimit.py  router.py  rule_engine.py  supervisor.py
inspectord/_native/: __init__.py
inspectord/alerts/: __init__.py  builder.py  dedup.py  ipc_handlers.py  lifecycle.py
inspectord/allowlist/: __init__.py  evaluator.py  file_loader.py
inspectord/dependencies/: __init__.py  applier.py  audit.py  backend.py  backup.py  distro.py  ipc_handlers.py  manifest.py  pacman_backend.py  pkg_helper.py  planner.py  probes.py  schemas.py  sidecar.py
inspectord/dependencies/manifest_files/: aide.yaml  auditd.yaml  ebpf_features.yaml  journald.yaml  libudev.yaml  yara.yaml
inspectord/enrichment/: __init__.py  file.py  process.py  user.py
inspectord/parsers/: __init__.py  auth_log.py  base.py  journald.py  pacman.py
inspectord/rules/: __init__.py  base.py  python_loader.py  registry.py  yaml_loader.py
inspectord/rules/starter_pack/: __init__.py  lolbin_reverse_shell.py  persistence_new_suid.yaml  persistence_sudoers.yaml  ssh_brute_force.py
inspectord/schemas/: alert.py  allowlist.py  case.py  event.py  incident.py  versions.py
inspectord/sources/: __init__.py  file_tail.py  journal_source.py
inspectord/storage/: db.py  migrations.py
inspectord/storage/migrations_data/: 0001_initial.sql  0002_deps.sql  0003_alerts.sql
inspectord/workers/: contract.py
inspectord/workers/dependency_manager/: __init__.py  __main__.py
inspectord/workers/fim_watcher/: __init__.py  __main__.py  paths.py
inspectord/workers/healthcheck/: __main__.py
inspectord/workers/log_tailer/: __init__.py  __main__.py
packaging/: allowlist.example.yaml
packaging/apparmor/: inspectord.in
packaging/polkit/: org.inspectord.policy.in
packaging/scripts/: pkg-helper.in
packaging/systemd/: inspectorctl-tray.service.template  inspectorctl-web.service.template  inspectord.service.template
tests/: conftest.py  test_alerts_migration.py  test_cli_alerts.py  test_cli_deps.py  test_cli_events.py  test_dependencies_applier.py  test_dependencies_audit.py  test_dependencies_backend_protocol.py  test_dependencies_backup.py  test_dependencies_distro.py  test_dependencies_ipc.py  test_dependencies_manifest.py  test_dependencies_migration.py  test_dependencies_pacman_backend.py  test_dependencies_pkg_helper.py  test_dependencies_planner.py  test_dependencies_probes.py  test_dependencies_schemas.py  test_dependencies_sidecar.py  test_dependencies_v1_manifests.py  test_dependencies_worker.py  test_dev_config_outbound_connection_tracker.py  test_dev_config_process_collector.py  test_dev_config_process_collector_exit.py  test_fim_watcher_worker.py  test_healthcheck_worker.py  test_ids.py  test_ipc_alerts.py  test_ipc_client.py  test_ipc_server.py  test_journal.py  test_log_tailer_worker.py  test_native_hello.py  test_native_loader.py  test_native_records.py  test_notifier_desktop_sink.py  test_notifier_worker.py  test_ratelimit.py  test_router.py  test_rule_engine.py  (+9 more)
tests/alerts/: test_builder.py  test_dedup.py  test_lifecycle.py
tests/allowlist/: test_evaluator.py  test_file_loader.py
tests/enrichment/: test_enrich_integration.py  test_file_enricher.py  test_process_enricher.py  test_user_enricher.py
tests/integration/: test_alerts_e2e.py  test_deps_worker_e2e.py  test_end_to_end_skeleton.py  test_log_tailer_e2e.py
tests/parsers/: test_auth_log_parser.py  test_base.py  test_journald_parser.py  test_pacman_parser.py
tests/parsers/fixtures/: journald.jsonl
tests/rules/: test_base.py  test_python_loader.py  test_registry.py  test_yaml_loader.py
tests/sources/: test_file_tail.py  test_journal_source.py
tests/web/: conftest.py  test_alerts.py  test_app_bootstrap.py  test_deps.py  test_events.py  test_health.py
tests/workers/: test_outbound_connection_tracker_worker.py  test_process_collector_exit_worker.py  test_process_collector_worker.py
(+18 files in other folders)
