[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "local-inspection"
version = "0.1.0"
description = "Unified Linux endpoint security console (Phase 0 skeleton)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "eli" }]

dependencies = [
    "pydantic>=2.7,<3",
    "duckdb>=1.0,<2",
    "typer>=0.12,<1",
    "rich>=13.7,<16",
    "pystray>=0.19,<1",
    "Pillow>=10.0,<13",
    "PyYAML>=6.0,<7",
    "Jinja2>=3.1,<4",
    "inotify_simple>=1.3,<2",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "ruff>=0.5,<1",
    "mypy>=1.10,<2",
    "types-Pillow>=10.0,<13",
    "types-PyYAML",
    "httpx>=0.27,<1",
]

[project.scripts]
inspectord = "inspectord.__main__:main"
inspectorctl = "inspectorctl.__main__:main"
inspectorctl-tray = "inspectorctl.tray.__main__:main"
inspectorctl-web = "inspectorctl.web.__main__:main"

[tool.maturin]
python-packages = ["inspectord", "inspectorctl"]
manifest-path = "crates/inspectord_native/Cargo.toml"
module-name = "inspectord._native"
bindings = "pyo3"
include = [
    { path = "inspectord/storage/migrations_data/**/*", format = "sdist" },
    { path = "inspectord/storage/migrations_data/**/*", format = "wheel" },
    { path = "inspectord/dependencies/manifest_files/**/*", format = "sdist" },
    { path = "inspectord/dependencies/manifest_files/**/*", format = "wheel" },
    { path = "inspectord/dependencies/templates/**/*", format = "sdist" },
    { path = "inspectord/dependencies/templates/**/*", format = "wheel" },
    { path = "inspectord/rules/starter_pack/**/*", format = "sdist" },
    { path = "inspectord/rules/starter_pack/**/*", format = "wheel" },
    { path = "inspectorctl/web/templates/**/*", format = "sdist" },
    { path = "inspectorctl/web/templates/**/*", format = "wheel" },
    { path = "inspectorctl/web/static/**/*", format = "sdist" },
    { path = "inspectorctl/web/static/**/*", format = "wheel" },
]
